# hik_plate

./: CMakeLists.txt  main.cpp
